@@ -2,6 +2,9 @@ module Druid
   module Elements
     class Form < Element
 
+      def self.finders
+        super + [:action]
+      end
       #
       # Submit the form
       #
